<resources>
    <string name="app_name">BollywoodCart</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_facebook_sign_in">Login with Facebook</string>
    <string name="action_google_sign_in">Login with Google</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register_in_short">Regsister</string>
    <string name="action_forgot_pwd">Forgot Password</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
