<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_bg"
    tools:context=".activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_marginTop="75dp"
                android:layout_gravity="center"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/facebook_button"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="@color/facebook_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_facebook_sign_in"
                android:textStyle="normal" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/google_button"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="@color/google_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/action_google_sign_in"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/action_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="jdkc"
                android:paddingLeft="50dp"
                android:background="@drawable/ic_email"/>

            <EditText
                android:id="@+id/action_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="jdkc"
                android:paddingLeft="50dp"
                android:background="@drawable/ic_pwd_feild"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="@color/btn_red_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="normal" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forgot_pwd_btn"
                style="@style/WhiteButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_forgot_pwd"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/black"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_btn"
                style="@style/WhiteButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/action_register"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
